<resources>
    <string name="app_name">Goal</string>
    <string name="title_activity_maps">Map</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDYsW4J4yCuDmkAqCBONWCoYyI98PeZq24</string>
    <string name="goal_logo">Goal Logo</string>
    <string name="goals_title">Goals</string>
    <string name="leaderboards_title">Leaderboards</string>
    <string name="statistics_title">Statistics</string>
    <string name="tryouts_title">Tryouts</string>
    <string name="burned_calories_title">Burned calories</string>
    <string name="background_photo">Background Photo</string>
    <string name="distance">Distance</string>
    <string name="time">Time</string>
    <string name="lightweight_round">Lightweight Round</string>
    <string name="cycles">Cycles</string>
    <string name="clock_image">clock_image</string>

</resources>
