<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context="net.glm.goal.MainActivity"
    tools:layout_editor_absoluteY="81dp">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="320dp"
        android:contentDescription="white background"
        android:src="@android:color/white"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_map_activity"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="Map Activity"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="597dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/leaderboards_title"
        android:textAppearance="@style/goals"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="66dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="24dp"
        android:text="@string/goals_title"
        android:textAppearance="@style/goals"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/statistics_title"
        android:textAppearance="@style/goals"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView4" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/tryouts_title"
        android:textAppearance="@style/tryouts"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView3" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="60dp"
        android:text="@string/burned_calories_title"
        android:textAppearance="@style/tryouts"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView2" />

    <TextView
        android:id="@+id/goals_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/tryouts"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="@+id/leaderboards_tv"
        app:layout_constraintTop_toTopOf="@+id/textView5"
        tools:text="58%" />

    <TextView
        android:id="@+id/leaderboards_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/tryouts"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="@+id/tryouts_tv"
        app:layout_constraintTop_toTopOf="@+id/textView4"
        tools:text="39th" />

    <TextView
        android:id="@+id/tryouts_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/tryouts"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="@+id/calories_tv"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        tools:text="5 times" />

    <TextView
        android:id="@+id/calories_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:textAppearance="@style/tryouts"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView"
        tools:text="786 cal" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="80dp"
        android:layout_height="17dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/goals_tv"
        app:layout_constraintEnd_toStartOf="@+id/goals_tv"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/goals_tv"
        tools:progress="50" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="33dp"
        android:layout_marginEnd="80dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="56dp"
        android:contentDescription="@string/background_photo"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/challenge5k" />

    <view
        android:id="@+id/recyclerView"
        class="android.support.v7.widget.RecyclerView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="244dp"
        android:padding="12dp"
        android:clipToPadding="false"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>
